syntax = "proto3";

message CounterNameChanged {
	string name = 1;
}